Lisätty esimerkkejä bootstrapin tyylien käytöstä.

--- a/BootstrapWebApp/BootstrapWebApp/Views/Home/Index.cshtml
+++ b/BootstrapWebApp/BootstrapWebApp/Views/Home/Index.cshtml
@@ -8,7 +8,66 @@
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
-<div class="row">
+<h2>Opiskelijarekisteri</h2>
+
+<table class="table table-striped table-hover">
+    <thead>
+        <tr>
+            <th>Opiskelijanumero</th>
+            <th>Nimi</th>
+            <th>Sähköposti</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>SA77833</td>
+            <td>Matti Möttönen</td>
+            <td>Matti@poincollege.fi</td>
+        </tr>
+        <tr>
+            <td>DH43536</td>
+            <td>Maija Möttönen</td>
+            <td>Maija@poincollege.fi</td>
+        </tr>
+        <tr>
+            <td>KH896985</td>
+            <td>Kaija Kukka</td>
+            <td>Kaija@poincollege.fi</td>
+        </tr>
+        <tr>
+            <td>SA77833</td>
+            <td>Matti Möttönen</td>
+            <td>Matti@poincollege.fi</td>
+        </tr>
+        <tr>
+            <td>DH43536</td>
+            <td>Maija Möttönen</td>
+            <td>Maija@poincollege.fi</td>
+        </tr>
+        <tr>
+            <td>KH896985</td>
+            <td>Kaija Kukka</td>
+            <td>Kaija@poincollege.fi</td>
+        </tr>
+        <tr>
+            <td>SA77833</td>
+            <td>Matti Möttönen</td>
+            <td>Matti@poincollege.fi</td>
+        </tr>
+        <tr>
+            <td>DH43536</td>
+            <td>Maija Möttönen</td>
+            <td>Maija@poincollege.fi</td>
+        </tr>
+        <tr>
+            <td>KH896985</td>
+            <td>Kaija Kukka</td>
+            <td>Kaija@poincollege.fi</td>
+        </tr>
+    </tbody>
+</table>
+
+<div class="row hidden">
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
